--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,39 +9,18 @@
 	android:layout_alignParentTop="true"
 	tools:context=".HazeSettings">
 
-	<LinearLayout
-		android:layout_width="match_parent"
+	<TextView
+		android:id="@+id/darknessRateTextView"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_alignParentTop="true"
-		android:orientation="horizontal"
-		android:weightSum="1">
-
-		<TextView
-			android:id="@+id/textView1"
-			android:layout_width="166dp"
-			android:layout_height="wrap_content"
-			android:layout_margin="15dp"
-			android:text="@string/txt_darkness_rate"
-			android:textSize="20sp" />
-
-		<EditText
-			android:id="@+id/rateNum"
-			android:layout_width="40dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="0.21"
-			android:ems="10"
-			android:inputType="number"
-			android:max="100"
-			android:maxLines="1"
-			android:min="0" />
-
-	</LinearLayout>
+		android:layout_margin="15dp"
+		android:text="@string/txt_darkness_rate"
+		android:textSize="20sp" />
 
 	<SeekBar
 		android:id="@+id/rateSeekBar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:min="0"
 		android:max="100"
 		android:layout_margin="15dp"/>
 
