--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -53,21 +53,36 @@
 		android:textSize="20sp"
 		android:layout_margin="15dp"/>
 
-	<Button
-		android:id="@+id/runBtn"
+	<RelativeLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/btn_run"
-		android:textSize="24sp"
-		android:layout_margin="10dp" />
+		android:layout_height="match_parent"
+		android:layout_centerHorizontal="true">
 
-	<Button
-		android:id="@+id/exitBtn"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:text="@string/btn_exit"
-		android:textSize="24sp"
-		android:layout_margin="10dp" />
+			<Button
+				android:id="@+id/runBtn"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_margin="10dp"
+				android:text="@string/btn_run"
+				android:textSize="24sp"
+				android:layout_toLeftOf="@id/txtHide" />
+
+			<TextView
+				android:id="@+id/txtHide"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerHorizontal="true" />
+
+			<Button
+				android:id="@+id/exitBtn"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_margin="10dp"
+				android:text="@string/btn_exit"
+				android:textSize="24sp"
+				android:layout_toRightOf="@id/txtHide"/>
+
+	</RelativeLayout>
 
 </LinearLayout>
 
